2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.6 ===

2009-01-19  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.5 ===

2009-01-13  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib-sections.txt:
	* glib/tmpl/base64.sgml: Mention g_base64_decode_inplace

2009-01-05  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.4 ===

2009-01-02  Matthias Clasen <mclasen@redhat.com>

	* glib/tmpl/string_utils.sgml: Move most function docs inline.

2009-01-01  Matthias Clasen <mclasen@redhat.com>

	Bug 565831 – error in interface creation sample

	* gobject/tut_howto.xml: Fix an example. Pointed out by
	Jens Georg.

2008-12-15  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.19.3 ===

2008-12-08  Matthias Clasen  <mclasen@redhat.com>

	* gio/gio-sections.txt: Add new functions

2008-12-07  Behdad Esfahbod  <behdad@gnome.org>

	Bug 563156 – Document printing and scanning gunichar values

	* glib/tmpl/unicode.sgml: Document printing and scanning gunichar
	values.

2008-12-07  Behdad Esfahbod  <behdad@gnome.org>

	Bug 563150 – G_GU?INT*_MODIFIER/FORMAT docs

	* glib/tmpl/glib-unused.sgml:
	* glib/tmpl/macros_misc.sgml:
	* glib/tmpl/types.sgml:
	Update docs to mention scanning as well as printing.
	Cross reference these from their respective types.

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.2 ===

2008-12-01  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.19.1 ===

2008-12-01  Alexander Larsson  <alexl@redhat.com>

        Reviewed by NOBODY (OOPS!).

        * gio/gio-sections.txt:

2008-11-30  Matthias Clasen  <mclasen@redhat.com>

	* glib/running.sgml: Mention all and help special options in
	debug envvars.

2008-11-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 562538 – GObject interface tutorial shouldn't finalise with
	"Please forget everything"

	* gobject/tut_gtype.xml: Remove the questionable closing sentence
	and all references to private functions. Pointed out by Christian