@@ -84,7 +84,11 @@
 <book id="index">
   <bookinfo>
     <title>GLib Reference Manual</title>
-    <releaseinfo>for GLib &version;</releaseinfo>
+    <releaseinfo>
+      for GLib &version;
+      The latest version of this documentation can be found on-line at
+      <ulink role="online-location" url="http://library.gnome.org/devel/glib/unstable/">http://library.gnome.org/devel/glib/unstable/</ulink>.
+    </releaseinfo>
   </bookinfo>
 
   <chapter id="glib">
